[tool.poetry]
name = "find_ladders"
version = "0.1.0"
description = ""
authors = ["Misha Bergal <misha.bergal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
