[tool.poetry]
name = "invert-binary-tree"
version = "0.1.0"
description = ""
authors = ["Misha Bergal <misha.bergal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
treelib = {git = "https://github.com/mbergal/treelib", rev = "master"}

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
